# het-crack-evaluator

./: README.md  app.py  database.py  pyproject.toml  statistics_logic.py
assets/: style.css
